# django-finances

./: .gitignore  LICENSE.md  README.md  TODO.md  pyproject.toml
django_finances/: admin.py  apps.py  fields.py  models.py  settings.py
django_finances/locale/nl/LC_MESSAGES/: django.po
django_finances/migrations/: 0001_initial.py  0002_add_base_model.py
django_finances/payments/: admin.py  apps.py  models.py
django_finances/payments/locale/nl/LC_MESSAGES/: django.po
django_finances/payments/migrations/: 0001_initial.py  0002_add_status.py
django_finances/payments/providers/: provider.py
django_finances/payments/providers/invoice/: models.py  provider.py
django_finances/payments/providers/mollie/: admin.py  apps.py  models.py  provider.py  urls.py  views.py
django_finances/payments/providers/mollie/migrations/: 0001_initial.py  0002_add_base_model.py
django_finances/payments/providers/sepa/: models.py  provider.py
django_finances/templatetags/: currency.py
django_finances/transactions/: admin.py  apps.py  models.py  validators.py
django_finances/transactions/locale/nl/LC_MESSAGES/: django.po
django_finances/transactions/migrations/: 0001_initial.py  0002_add_recurring_transaction.py  0003_add_validation.py
django_transactions/: apps.py  settings.py
django_transactions/migrations/: 0001_initial.py
django_transactions/payments/: admin.py  apps.py  models.py  settings.py
django_transactions/payments/migrations/: 0001_initial.py
django_transactions/payments/providers/invoice/: models.py
django_transactions/payments/providers/sepa/: models.py
django_transactions/payments/providers/sepa/templates/payments/providers/sepa/: pain.008.001.10.xml
django_transactions/transactions/: admin.py  apps.py  models.py  settings.py
django_transactions/transactions/migrations/: 0001_initial.py
django_transactions/transactions/templatetags/: currency.py
docs/: development.md  index.md  installation.md
example/example/: providers.py  settings.py  urls.py
example/example/settings/: all.py  base.py  only_payments.py  only_transactions.py
