[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django_transactions"
version = "0.0.1"
description = "Financial transactions and payments for Django."
authors = ["Daniel Huisman <daniel@huisman.me>"]
maintainers = ["Daniel Huisman <daniel@huisman.me>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/DanielHuisman/django-transactions"
repository = "https://github.com/DanielHuisman/django-transactions"

keywords = ["django", "transaction", "payment", "finance"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
django = "^4.0"
python = "^3.8"

[tool.poetry.dev-dependencies]
